@@ -472,6 +472,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8052. Move WebHdfsFileSystem into hadoop-hdfs-client. (wheat9)
 
+    HDFS-8176. Record from/to snapshots in audit log for snapshot diff report.
+    (J. Andreina via jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
